# nanoagent

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  agent.py  main.py  pyproject.toml
agent/: __init__.py  agent.py  context_management.py  response_processor.py  token_management.py  utils.py
prompts/: __init__.py  base.py  compaction.py  system.py
tests/: auto_test.py  test_tools.py
tools/: __init__.py  base.py  bash.py  edit.py  ls.py  read.py
