[project]
name = "nano"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.28.0",
]

[[tool.uv.index]]
url = "https://bytedpypi.byted.org/simple"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
